k8s/local/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wertee-dev
  labels:
    environment: development
    app: wertee
